[tool.poetry]
name = "airbnb-cline-backend"
version = "0.1.0"
description = ""
authors = ["elanvital3 <elanvital3@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_cline_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
